Collapse the multi-version layer and retire the intermediary lookups
Delete the version-switch machinery and the paths it selected against, then
subtract the wrappers the collapse left empty. Rename Yarn names to Mojang
names, name the mixin and injected-interface targets, and cut Reflection
down to the handful of members that still have no Mojang name.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>